# QET_TerminalTableApp

./: .gitignore  README .me  README.md  README.me  build.sh  main.py  pyproject.toml
src/: __main__.py  aboutWindow.py  create_conductorlist.py  create_database.py  main_funktions.py  read_xml_file.py  setup.py  sorting_functions.py  table_functions.py  terminal_table_classes.py
src/TerminalTableApp/: TerminalTableApp.pot  __init__.py  main.py  main_funktions.py  run.py
src/TerminalTableApp/locale/: messages.pot
src/TerminalTableApp/locale/de/LC_MESSAGES/: TerminalTableApp.mo  TerminalTableApp.po
src/TerminalTableApp/locale/en/LC_MESSAGES/: TerminalTableApp.mo  TerminalTableApp.po
src/TerminalTableApp/read/: read_xml_file.py
src/TerminalTableApp/resources/: icons.qrc  icons_rc.py
src/TerminalTableApp/sort/: sorting_functions.py  sql_queries.py  terminal_table_classes.py
src/TerminalTableApp/ui/: MainWindow.py
src/TerminalTableApp/write/: create_table.py  table_functions.py
src/TerminalTableCreator/: HelpWindow.py  Main.py  MainWindow.py  create_table.py  sql_queries.py
src/TerminalTableCreator/locale/: TerminalTableApp.pot
src/locale/de/LC_MESSAGES/: TerminalTableApp.mo  TerminalTableApp.po
src/locale/en/LC_MESSAGES/: TerminalTableApp.mo  TerminalTableApp.po
